--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.14.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
