--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write --ignore-unknown ."
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -15,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@remixicon/react": "^4.1.1",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.7.2",
     "framer-motion": "^11.0.3",
