--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@remixicon/react": "^4.1.1",
+    "algoliasearch": "^4.24.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.7.2",
@@ -25,9 +26,11 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
+    "react-instantsearch": "^7.12.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
